Выгрузка в cs cart
Формат данных соотвествует cs cart
Вычисляется дерево категорий

--- a/HobbyCenterExporter/HobbyCenterExporter.csproj
+++ b/HobbyCenterExporter/HobbyCenterExporter.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CCatTree.cs" />
     <Compile Include="CDatafileInterface.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="Form1.cs">
