--- a/HobbyCenterExporter/HobbyCenterExporter.csproj
+++ b/HobbyCenterExporter/HobbyCenterExporter.csproj
@@ -50,17 +50,17 @@
     <Compile Include="CCatTree.cs" />
     <Compile Include="CDatafileInterface.cs" />
     <Compile Include="Entity.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="FStartForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FStartForm.Designer.cs">
+      <DependentUpon>FStartForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form2.cs">
+    <Compile Include="FWebLoader.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <Compile Include="FWebLoader.Designer.cs">
+      <DependentUpon>FWebLoader.cs</DependentUpon>
     </Compile>
     <Compile Include="FExportTable.cs">
       <SubType>Form</SubType>
@@ -82,11 +82,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FStartForm.resx">
+      <DependentUpon>FStartForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <EmbeddedResource Include="FWebLoader.resx">
+      <DependentUpon>FWebLoader.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FExportTable.resx">
       <DependentUpon>FExportTable.cs</DependentUpon>
